--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="lxxU11MnaecoVHrT49BcySlkTbJsb80SVxdQTu4HZq0" />
     <title>Projects Unofficial</title>
     <link rel="stylesheet" href="./tailwind_dist/output.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
